feat: revamp order email workflow with payment-aware HTML templates, add policy hard-delete API, and align Maison Art branding/security updates